--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
@@ -39,9 +39,14 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col col-sm-3 align-self-center">
+	                <a role="button" class="btn btn-warning btn-block" href="#reserveTable">
+	                    Reserve Table
+	                </a>
+	            </div>
             </div>
         </div>
     </header>
@@ -76,8 +81,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+	                    <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+	                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+	                </div>
+	                <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet" />
+                </div>
             </div>
         </div>
 
@@ -97,6 +107,71 @@
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
                             </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content" id="reserveTable">
+            <div class="col-12 col-sm-8 offset-sm-2">
+                <div class="card">
+                     <div class="card-header bg-warning text-white">
+	                    <h3 class="mb-0">Reserve a Table</h3>
+	                </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="optradio" class="col-sm-2 col-form-label">Number of Guests</label>
+                                <div class="col-sm-6 row">
+                                    <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="1" />1
+	                                    </label>
+	                                </div>
+	                                <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="2" />2
+	                                    </label>
+	                                </div>
+	                                <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="3" />3
+	                                    </label>
+	                                </div>                                  
+	                                <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="4" />4
+	                                    </label>
+	                                </div>
+	                                <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="5" />5
+	                                    </label>
+	                                </div>
+	                                <div class="form-check col-2">
+	                                    <label class="form-check-label">
+	                                        <input type="radio" class="form-check-input" name="optradio" value="6" />6
+	                                    </label>
+	                                </div>         
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="date time" class="col-sm-2 col-form-label">Date and Time</label>
+                                <div class="col-sm-8 row align-items-center">
+                                    <div class="col-sm-6 input-group">
+	                                    <input type="text" class="form-control" name="date" id="date" placeholder="Date" />
+	                                </div>
+	                                <div class="col-sm-6 input-group">
+	                                    <input type="text" class="form-control" name="time" id="time" placeholder="Time" />
+	                                </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+	                            <div class="col-sm-10 offset-sm-2">
+	                                <button type="submit" class="btn btn-primary">Reserve</button>
+	                            </div>
+	                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
