--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
@@ -43,7 +43,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3 align-self-center">
-	                <a role="button" class="btn btn-warning btn-block" href="#reserveTable">
+	                <a role="button" class="btn btn-sm btn-warning btn-block" href="#reserveTable">
 	                    Reserve Table
 	                </a>
 	            </div>
@@ -112,8 +112,8 @@
             </div>
         </div>
 
-        <div class="row row-content" id="reserveTable">
-            <div class="col-12 col-sm-8 offset-sm-2">
+        <div class="row row-content align-items-center" id="reserveTable">
+            <div class="col-12 col-sm-8 mx-auto">
                 <div class="card">
                      <div class="card-header bg-warning text-white">
 	                    <h3 class="mb-0">Reserve a Table</h3>
@@ -121,39 +121,39 @@
                     <div class="card-body">
                         <form>
                             <div class="form-group row">
-                                <label for="optradio" class="col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-sm-6 row">
-                                    <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="1" />1
-	                                    </label>
-	                                </div>
-	                                <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="2" />2
-	                                    </label>
-	                                </div>
-	                                <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="3" />3
-	                                    </label>
-	                                </div>                                  
-	                                <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="4" />4
-	                                    </label>
-	                                </div>
-	                                <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="5" />5
-	                                    </label>
-	                                </div>
-	                                <div class="form-check col-2">
-	                                    <label class="form-check-label">
-	                                        <input type="radio" class="form-check-input" name="optradio" value="6" />6
-	                                    </label>
-	                                </div>         
-                                </div>
+                                <label for="optradio" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                                    <div class="form-check form-check-inline">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests1"
+                                                value="1">
+                                            <label class="form-check-label" for="numberguests1">1</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests2"
+                                                value="2">
+                                            <label class="form-check-label" for="numberguests2">2</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests3"
+                                                value="3">
+                                            <label class="form-check-label" for="numberguests3">3</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests4"
+                                                value="4">
+                                            <label class="form-check-label" for="numberguests4">4</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests5"
+                                                value="5">
+                                            <label class="form-check-label" for="numberguests5">5</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="numberguests" id="numberguests6"
+                                                value="6">
+                                            <label class="form-check-label" for="numberguests6">6</label>
+                                        </div>
+                                    </div>
                             </div>
                             <div class="form-group row">
                                 <label for="date time" class="col-sm-2 col-form-label">Date and Time</label>
