--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
@@ -86,14 +86,92 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-sm btn-warning btn-block" href="#reserveTable"
-                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom">
+                    <a role="button" class="btn btn-sm btn-warning btn-block" data-toggle="modal" data-target="#reservemodal">
 	                    Reserve Table
 	                </a>
 	            </div>
             </div>
         </div>
     </header>
+
+    <div id="reservemodal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="optradio" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="form-check form-check-inline">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests1" value="1">
+                                    <label class="form-check-label" for="numberguests1">1</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests2"
+                                        value="2">
+                                    <label class="form-check-label" for="numberguests2">2</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests3"
+                                        value="3">
+                                    <label class="form-check-label" for="numberguests3">3</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests4"
+                                        value="4">
+                                    <label class="form-check-label" for="numberguests4">4</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests5"
+                                        value="5">
+                                    <label class="form-check-label" for="numberguests5">5</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="numberguests" id="numberguests6"
+                                        value="6">
+                                    <label class="form-check-label" for="numberguests6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-sm-2 col-form-label">Section</label>
+                            <div class="col-sm-10 btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="section" id="section" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="section" id="section" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="date time" class="col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-sm-8 row align-items-center">
+                                <div class="col-sm-6 input-group">
+	                                <input type="text" class="form-control" name="date" id="date" placeholder="Date" />
+	                            </div>
+	                            <div class="col-sm-6 input-group">
+	                                <input type="text" class="form-control" name="time" id="time" placeholder="Time" />
+	                            </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-10 offset-sm-2">
+                                <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+	                            <button type="submit" class="btn btn-primary">Reserve</button>
+	                        </div>
+	                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content">
@@ -138,6 +216,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -202,7 +288,7 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center" id="reserveTable">
+        <!-- <div class="row row-content align-items-center" id="reserveTable">
             <div class="col-12 col-sm-8 mx-auto">
                 <div class="card">
                      <div class="card-header bg-warning text-white">
@@ -265,7 +351,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <footer class="footer">
@@ -315,9 +401,20 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $('#mycarousel').carousel({ interval: 3000 });
+            $('#carousel-pause').click(function() {
+                $('#mycarousel').carousel('pause');
+            });
+            $('#carousel-play').click(function() {
+                $('#mycarousel').carousel('cycle');
+            });
         });
     </script>
+    <!-- <script>
+        $(document).ready(function() {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script> -->
 </body>
 
 </html>
