--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                     </ul>
                     <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginmodal">
+                        <a id="loginbutton" role="button">
                             <span class="fa fa-sign-in"></span> Login
                         </a>
                     </span>
@@ -86,7 +86,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-sm btn-warning btn-block" data-toggle="modal" data-target="#reservemodal">
+                    <a role="button" class="btn btn-sm btn-warning btn-block" id="reservebutton">
 	                    Reserve Table
 	                </a>
 	            </div>
@@ -408,6 +408,16 @@
                     $('#carouselButton').children('span').addClass('fa-pause');           
                 }
             });
+        });
+    </script>
+    <script>
+        $('#loginbutton').click(function() {
+            $('#loginmodal').modal('show');
+        });
+    </script>
+    <script>
+        $('#reservebutton').click(function() {
+            $('#reservemodal').modal('show');
         });
     </script>
     <!-- <script>
