--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/aboutus.html
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/aboutus.html
@@ -9,11 +9,12 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <meta http-equiv="x-ua-compatible" content="ie=edge">
  
-     <!-- Bootstrap CSS -->
+     <!-- build:css css/main.css -->
      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
      <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
      <link rel="stylesheet" href="css/styles.css">
+     <!-- endbuild -->
 
 </head>
 
@@ -251,11 +252,12 @@
            </div>
         </div>
     </footer>
-     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-     <script src="js/scripts.js"></script>
+    <!-- build:js js/main.js -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
